# Advancing-AI-Reasoning-Comparative-Analysis-of-CoT-Meta-CoT-and-Hierarchical-Reasoning-on-GSM8K

./: README.md
arc_cot_baseline/: pyproject.toml
arc_cot_baseline/configs/: model_config.yaml  train_config.yaml
arc_cot_baseline/scripts/: run_cot_arc1.sh
arc_cot_baseline/src/arc1_cot/: __init__.py  dataset.py  evaluate.py  model_gpt2.py  parsing.py  prompts.py  utils.py
arc_cot_baseline/tests/: test_infer_smoke.py  test_parsing.py  test_prompts.py
