[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cot-gpt2-baseline"
version = "0.1.0"
description = "Baseline Chain-of-Thought implementation using GPT-2 small"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "tqdm",
]
